k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: issue-tracker
  labels:
    name: issue-tracker
