k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: issue-tracker
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  templete:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: yasindudemel/issue-tracker-backend:latest
          ports:
            -containerPorts: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: issue-tracker
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP

  ---
  apiVersion: autoscaling/v2
  kind: HorizontalPodAutoscaler
  metadata:
    name: backend-hpa 
    namespace: issue-tracker 
  spec:
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: backend
    minReplicas: 1
    maxReplicas: 5
    matrics:
      - type: Resource
        resource: 
          name: cpu
          target:
            type: utilization
            avarageUtilization: 70
      - type: Resource
        resource:
          name: memory
          target:
            type: utilization
            avarageUtilization: 80
